--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="center-container"><span class="text-gray">My Education journey </span></div>
             <h2>Education</h2>
             <div class="education-item">
-                <h3>vivekanandha college of engineering for women</h3>
+                <h3>Vivekanandha college of engineering for women</h3>
                 <p class="education-date">2021 - 2024</p>
                 <p class="education-degree">Bachelor of Technology in Information technology</p>
                 <p class="education-description">Current CGPA 8.3/10, NSS volunteer, department co-ordinator.</p>
