--- a/index.html
+++ b/index.html
@@ -177,21 +177,17 @@
                                         The project emphasizes a minimalist approach, leveraging basic JavaScript functionality to enhance user interaction. 
                                         While lacking a traditional cart system, the emphasis is on a straightforward and efficient ordering experience, making it accessible to users seeking a quick and uncomplicated food selection and purchase process.
                                     </p>
-                                    <a href="https://github.com/DivyapriyaR04/food-hub" target="_blank">Learn More</a>
+                                    <a href="https://divyapriyar04.github.io/food-hub/" target="_blank">Learn More</a>
                                 </div>
                             </div>
                             <div class="project">
-                                <img src="figma design.png" alt="Project 3">
+                                <img src="learning app mockup.png" alt="Project 3">
                                 <div class="project-details">
-                                    <h3>StudentHub: IT Achievements & Events</h3>
-                                    <p>This Figma-designed UI/UX project for our college's Information Technology Department is a user-friendly platform. 
-                                        It neatly displays student details, achievements, and departmental events. 
-                                        Easy navigation allows staff to effortlessly access and manage student information. 
-                                        The design uses pleasing colors that represent the department's identity. 
-                                        Interactive elements bring student achievements and past events to life. 
-                                        Figma's collaborative features make continuous improvements easy. 
-                                        The project blends functionality and aesthetics, creating a simple and engaging experience for efficiently handling student data and showcasing the department's vibrant activities.
-                                        <a href="https://www.figma.com/file/fncpJDdyV5c5Cf58aj34Kt/STUDENTS?type=design&node-id=0%3A1&mode=design&t=adxmt96p8qLNM7ts-1" target="_blank">Learn More</a>
+                                    <h3>Learning Design App</h3>
+                                    <p>Clean and minimalist interface with vibrant accents to keep users engaged.
+                                    Illustrations and icons representing various programming concepts and activities.
+                                    Seamless transitions and animations to enhance the overall user experience.
+                                        <a href="https://www.behance.net/gallery/193812557/programming-Learning-app">Learn More</a>
                                     </p>
                                 </div>
                             </div>
