--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="project">
-                                <img src="learning app mockuo.png" alt="Project 3">
+                                <img src="./learning app mockup.png" alt="Project 3">
                                 <div class="project-details">
                                     <h3>Learning Design App</h3>
                                     <p>Clean and minimalist interface with vibrant accents to keep users engaged.
