--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                             <section class="contact" id="contact">
                                 <h2>Contact Me</h2>
                                 <div class="contact-form">
-                                    <form>
+                                    <form name = "submit-to-googlesheet">
                                         <input type="text" placeholder="Name" class="input-field">
                                         <input type="email" placeholder="Email" class="input-field">
                                         <textarea placeholder="Message" class="textarea-field"></textarea>
