--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                                 <h2>Contact Me</h2>
                                 <div class="contact-form">
                                     <form name = "submit-to-googlesheet">
-                                        <input type="text" placeholder="Name" class="input-field">
-                                        <input type="email" placeholder="Email" class="input-field">
-                                        <textarea placeholder="Message" class="textarea-field"></textarea>
+                                        <input type="text" placeholder="Name" name="Name" class="input-field">
+                                        <input type="email" placeholder="Email" name = "Email"class="input-field">
+                                        <textarea placeholder="Message" name="Message"class="textarea-field"></textarea>
                                         <button type="submit" class="submit-btn">Send Message</button>
                                     </form>
                                 </div>
