--- a/index.html
+++ b/index.html
@@ -220,6 +220,12 @@
                                     <div class="footer-social">
                                         <a href="https://www.linkedin.com/in/divyapriya-r-71b340240/" target="_blank" rel="noopener noreferrer"><i
                                                 class="fab fa-linkedin"></i></a>
+                                        <a href="https://github.com/DivyapriyaR04" target="_blank" rel="noopener noreferrer"><i
+                                                class="fab fa-github"></i></a>
+                                        <a href="https://www.behance.net/divyapriyar" target="_blank" rel="noopener noreferrer"><i
+                                                class="fab fa-behance"></i></a>
+                                        <a href="https://dribbble.com/__DivyaPriya" target="_blank" rel="noopener noreferrer"><i
+                                                class="fab fa-dribbble"></i></a>
                                     </div>
                                     <p>&copy; 2023 Divyapriya rajkumar - Portfolio. All rights reserved.</p>
                                 </footer>
